Adding the dropdown text

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -275,7 +275,7 @@ In conclusion, our educational visit to Board High School, followed by the visit
 </div>
 
 
-  <p class="mt-5 MAIN-STUFF">Reaching out to Middle School Students</p>
+  <p class="mt-5 MAIN-STUFF" id='section2'>Reaching out to Middle School Students</p>
   <p class="mt-5 sub-stuff">Teaching middle school students about environmental concepts was crucial as it promotes mutual learning. We tailored our content to align with the general school curriculum, focusing on chemicals, pollutants, and sustainability rather than biology. This approach encourages responsible, sustainable attitudes from an early age. <br>
 Our documentation can aid future educational initiatives and highlight broader environmental issues. Moreover, it encourages early engagement in environmental issues and lays a foundation for understanding its relevance to real-world challenges.</p>
 
@@ -309,7 +309,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   </div>
 
 
-  <p class='mt-5 MAIN-STUFF'> Sparking young minds</p>
+  <p class='mt-5 MAIN-STUFF' id='section3'> Sparking young minds</p>
   <p class='mt-5 sub-stuff'> Teaching primary school students about environmental concepts is essential as it promotes early curiosity. We engaged them by using an activity booklet and a comic strip. While we did not teach specific content, our creative approach sparks interest and encourages early engagement in science, fostering an understanding of its relevance to real-world challenges.</p>
 
   <div class="accordion" id="accordionExample">
@@ -365,7 +365,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF'> Presentation to our scientific peers</p>
+  <p class='mt-5 MAIN-STUFF' id='section4'> Presentation to our scientific peers</p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
@@ -463,7 +463,7 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF'> Educating and gaining opinions from working professionals </p>
+  <p class='mt-5 MAIN-STUFF' id='section5'> Educating and gaining opinions from working professionals </p>
 
 
   <div class="accordion" id="accordionExample">
@@ -493,22 +493,159 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF'> Synthetic Biology for Everyone </p>
+  <p class='mt-5 MAIN-STUFF' id='section6'> Spreading public awareness about synthetic biology  </p>
+
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyone">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
+        <b>Bioremediation Conclave</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyone" class="accordion-collapse collapse show" aria-labelledby="headingTwentyone">
+      <div class="accordion-body">
+        <p>The Bioremediation Conclave hosted by iGEM MIT-MAHE in collaboration with iGEM IIT-Delhi was an initiative by both teams to promote synthetic biology in bioremediation. It was a 3-day event where the first two days had two esteemed speakers from various universities and start-ups. In contrast, the third day was an opportunity for iGEM teams under the Bioremediation track to showcase the technical aspects of their project to the audience. This event helped us reach a larger audience and spread knowledge about synthetic biology in bioremediation.<br>
+
+Both the teams have collated a report on this event:<br></p>
+
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
+        <b>Newspaper article in Hindi</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyTwo" class="accordion-collapse collapse" aria-labelledby="headingTwentyTwo">
+      <div class="accordion-body">
+        <p>In order to target a broader range of society and make our project accessible to all, we published an article in a local Hindi newspaper called “Naidunia” (meaning New World), popular in Central India. The article comprised the basics of synthetic biology, followed by an introduction about iGEM as a competition. It also briefly explained our project, “CarbanEl,” while explaining the harmful impacts of triclocarban (TCC) on the environment.<p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyThree" aria-expanded="false" aria-controls="collapseTwentyThree">
+        <b>Online Blog series</b>
+
+      </button>
+    </h2>
+    <div id="collapseTwentyThree" class="accordion-collapse collapse" aria-labelledby="headingTwentyThree">
+      <div class="accordion-body">
+        <p>Through our online blog, we published five articles on Medium to promote dialogue in synthetic biology:<br>
+            <ol>
+              <li><u>Big Data Challenges in Genomics and Proteomics:</u> Explored the complexities of managing large datasets, providing insights for researchers</li>
+              <li><u>The Power of POSH - Post Translation Switch: </u>Introduced the potential of POSH, showcasing innovative applications.</li>
+              <li><u>Bioremediation in Space Exploration:</u> Explored the intersection of bioremediation and space, fostering cross-disciplinary interest.</li>
+              <li><u>Environmental Remediation Using Genetically Engineered Organisms:</u> Discussed practical applications of synthetic biology in environmental solutions.</li>
+              <li><u>Synthetic Biology - A Confluence of Biology and Engineering:</u> Highlighted the history and potential of synthetic biology while explaining iGEM and our project "CarbanEl."</li>
+            </ol>
+            These articles were thoughtfully implemented as part of our educational outreach efforts. They were helpful resources intended to educate, engage, and inspire rather than just being simple marketing tools. Each essay sought to educate readers, pique their interest, and promote discussion about synthetic biology's enormous potential and its role in resolving urgent global problems among various communities. We seek to empower more people to design, contribute to, and engage in synthetic biology through our articles.<br>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyFour" aria-expanded="false" aria-controls="collapseTwentyFour">
+        <b>#SustainableSaturday with Green Yatra</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyFour" class="accordion-collapse collapse" aria-labelledby="headingTwentyFour" >
+      <div class="accordion-body">
+        <p>On September 9th, 2023, we collaborated with Green Yatra to conduct a talk shedding light on the presence of hazardous chemicals, such as Triclocarban (TCC), in our personal care products. Green Yatra, a prominent environmental NGO in India, is dedicated to advancing the Sustainable Development Goals (SDGs) through tree planting, urban biodiversity preservation, water body restoration, sustainable solutions, and environmental research and awareness.<br>
+
+Mr. Anmol Valiyare graciously co-hosted this enlightening #SustainableSaturday session alongside our Human Practices Co-Head, Shreya V. The discussion commenced with an introduction to synthetic biology, iGEM, and our current project for iGEM 2023.<br><br>
+
+Subsequently, Shreya delved into the concealed risks associated with harmful chemicals in our personal care products (PCPs). These products often incorporate antimicrobials to inhibit microorganism growth. However, more frequently than not, these additives threaten our health and cast shadows over the delicate ecosystems surrounding us. Shreya then focused on TCC, emphasizing its troubling persistence over extended periods, leading to bioaccumulation – a process in which the chemical accumulates in aquatic organisms. The accumulation of TCC disrupts their hormonal systems, adversely affecting reproduction, development, and overall population dynamics. These effects ripple through ecosystems, causing shifts in biodiversity, altering food chains, and ultimately compromising human well-being.<br>
+Shreya discussed how we can drive change through informed decisions, sharing a comprehensive approach to guide us toward a more sustainable future. She emphasized the importance of educating ourselves about the chemicals used in products, carefully reading labels before making purchases, supporting responsible brands, and exploring safer alternatives. Informed and conscientious consumers can encourage manufacturers to prioritize using safer ingredients, adopt sustainable manufacturing practices, and reduce their environmental footprint.<br><br>
+
+We thank Green Yatra for granting us this valuable platform to voice our concerns and promote sustainability. This session gave us a chance to reach the general population and raise awareness about the presence of harmful chemicals in our PCPs.<br>
+</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyFive">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyFive" aria-expanded="false" aria-controls="collapseTwentyFive">
+        <b>SynBio Comic Series</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyFive" class="accordion-collapse collapse" aria-labelledby="headingTwentyFive">
+      <div class="accordion-body">
+        <p>Comic strips showcase our creativity while explaining basic biological concepts to the community in simple terms. We put up a series of three comic strips on our Instagram handle to interact with our audience and attract their interest in this field. It added a fun element to our education approach while keeping our audience's interest alive.<br></p>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentySix">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentySix" aria-expanded="false" aria-controls="collapseTwentySix">
+        <b>A Series on Synthetic Biology Applications</b>
+      </button>
+    </h2>
+    <div id="collapseTwentySix" class="accordion-collapse collapse" aria-labelledby="headingTwentySix">
+      <div class="accordion-body">
+        <p>In order to reach our audience uniquely, we posted an "Applications of SynBio" series on our Instagram. We showcased three unique advances in synthetic biology, thus opening people's minds to the importance of SynBio and further development; this was our way of taking a step toward raising awareness about the applications of synthetic biology in the community. <br><br>
+
+<b>Episode 1:</b> Chimeric Antigen Receptors T-cell therapy is a newfound form of cancer immunotherapy that acts as a personalized living drug.<br>
+CAR T-cell therapy, a revolutionary living drug, employs customized T-cells to combat cancer. Promising studies, such as one in Spain, show significant remission rates, transforming cancer treatment, particularly for leukemia and lymphoma, with the potential for the word 'cure' to become more common in oncology.<br>
+<b>Episode 2:</b> Using Waste from Whiskey Production: How bacteria and Copper nanoparticles are transforming distillery byproducts.<br>
+Synthetic biology is transforming waste management by using bacteria to convert copper ions in whiskey production byproducts into copper nanoparticles with applications in dentistry. This innovative approach cleans up waste and produces valuable materials for compost and animal feed, showcasing the sustainable potential of synthetic biology in waste treatment.<br>
+<b>Episode 3:</b> <br>
+Biochar, derived from biomass, is a carbon-rich substance with applications in carbon removal, soil purification, water treatment, and more. Despite challenges like stability and heavy metal content, it can capture significant CO2 and reduce greenhouse gasses. Nevertheless, biochar has immense potential in addressing climate change, improving agriculture, and waste management with a growing global market. Overcoming technical and regulatory hurdles is critical to its success.<br>
+</p>
+
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentySeven">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentySeven" aria-expanded="false" aria-controls="collapseTwentySeven">
+        <b>Music composition from our TccA amidase protein sequence</b>
+      </button>
+    </h2>
+    <div id="collapseTwentySeven" class="accordion-collapse collapse" aria-labelledby="headingTwentySeven">
+      <div class="accordion-body">
+        <p>Science and music are intricately intertwined with layers of shared principles and interdependence as they involve elements of exploration, creativity, and analysis. Through this unconventional approach we grasped the attention of many audiences irrespective of their ages, so we identified a software that assigns notes to each amino acid. We set notes to our amidase protein sequence using this software and created a piano sample.<br>
+To make it sound more creative and professional, we collaborated with Paras Ahuja, one of the most creative musicians and music producers in Manipal. He composed and produced the whole music track using the piano sample as the primary element and added his own unique, creative, and experimental musical additions. Further, it paved a path for us to educate visually impaired people.
+</p>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyEight">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyEight" aria-expanded="false" aria-controls="collapseTwentyEight">
+        <b>Handbook</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyEight" class="accordion-collapse collapse" aria-labelledby="headingTwentyEight" >
+      <div class="accordion-body">
+        <p>From our survey we inferred that the general public, particularly working class individuals are not as concerned as expected about micropollutants, thus through our handbook we aim to educate those interested on Water Pollution, Understanding Micropollutants, Water Treatment Methods, Prevention and Source Control and Wastewater Management.
+      </p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+  <p class='mt-5 MAIN-STUFF' id='section7'> Synthetic Biology for Everyone </p>
 
   <p class='mt-5 sub-stuff'> On many occasions, the differently-abled are excluded from science and technology. Science is for everyone. To bring fruition to our beliefs, we visited a rehabilitation center and interacted with the members at their homes.<br><br>
 On 7 October 2023, our team visited the Asare Rehabilitation Centre—a home for the differently-abled. The senior special educator welcomed us to the institution and began by discussing how Asare houses people traditionally excluded from other homes. We then proceeded to provide crayons and coloring sheets to all the residents; they were coloring soap bottles. We used the subject of the coloring sheets as a starter for our skit, which we conducted in the local language, Kannada, and introduced our year-long project, CarbanEL. We used color changes in a beaker to signify how our project would work and, therefore, attempted to demonstrate our project more interactively. We ended the session with some songs and answered the doubts raised by the residents about our project and other scientific terms. Through this visit, we understood that there are no barriers to understanding science, and their enthusiasm toward our initiative was enlivening.</p>
 
-  <p class='mt-5 MAIN-STUFF'> Our Takeaway</p>
+  <p class='mt-5 MAIN-STUFF' id='section8'> Our Takeaway</p>
   <p class='mt-5 sub-stuff'> For future teams to build upon and our biggest take away from our educational visits, this is our “Guide to Education” for various age groups. <br><br>
 This is one of the major challenges faced by our team during our education sessions. The differences in age groups, regions and languages was something that one needs to keep in mind while planning a session.<br><br> 
 From our educational visits across various states of India, we have realized a few things that need to be pondered over before an educational visit. We have attempted to compile thought-provoking and follow-up questions on how to effectively convey our ideas to the different sections of the community  and educate them about synthetic biology and more. </p>
-
-
-
-
-
-
-
                   </div>
 
                 <div class='m-5' style="height: 50px">
