--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -26,7 +26,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Team
                       </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #5ebca5;">
                         <a class="dropdown-item" href="{{ url_for('pages', page='team') }}">Meet the Team</a>
                         <a class="dropdown-item" href="{{ url_for('pages', page='attributions') }}">Attributions</a>
                       </div>
@@ -35,7 +35,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Project
                       </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #5ebca5;">
                         <a class="dropdown-item" href="{{ url_for('pages', page='contribution') }}">Contributions</a>
                         <a class="dropdown-item" href="{{ url_for('pages', page='description') }}">Description</a>
                         <a class="dropdown-item" href="{{ url_for('pages', page='project-design') }}">Design</a>
@@ -51,7 +51,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Engagement
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #66D7EB;">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #5ebca5;">
                       <a class="dropdown-item" href="{{ url_for('pages', page='human-practices') }}">Human Practices</a>
 
                       <a class="dropdown-item" href="{{ url_for('pages', page='education') }}">Education</a>
