--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -123,13 +123,13 @@ Our team members were able to visit several high schools across the states of Ka
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/mathworks.jpg" alt="First slide">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-19-15.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/idt.jpg" alt="Second slide">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-17-20.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/allegro.jpg" alt="Third slide">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-00-25-58.jpeg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
