--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -4,90 +4,76 @@
 
 <!-- Sidebar -->
 
-        <div class="content-container" style="display:flex;">
-        <div class="sidebar">
-            <div class="d-flex flex-column flex-shrink-0 p-1" id="saveme" style="width: 200px; height: 100vh; overflow-y: auto; position: fixed; background-color: #ffffff;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none" style="color: #000000;">
-              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            </a>
-            <hr>
+        {% sidebar_content %}
+
             <ul class="nav nav-pills flex-column mb-auto">
               <li class="nav-item">
                 <a href="#section1" class="nav-link link-dark" aria-current="page">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                  1. iGEM ABOA
+                  iGEM ABOA
                 </a>
               </li>
               <li>
                 <a href="#section2" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-                  2. Maastricht iGEM
+                  Maastricht iGEM
                 </a>
               </li>
               <li>
                 <a href="#section3" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                  3. Penn State iGEM
+                  Penn State iGEM
                 </a>
               </li>
               <li>
                 <a href="#section4" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-                  4. iGEM McGill
+                  iGEM McGill
                 </a>
               </li>
               <li>
                 <a href="#section5" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  5. iGEM IISER Bhopal
+                  iGEM IISER Bhopal
                 </a>
               </li>
 
               <li>
                 <a href="#section6" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  6. iGEM NTHU
+                  iGEM NTHU
                 </a>
               </li>
 
               <li>
                 <a href="#section7" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  7. OUC-China
+                  OUC-China
                 </a>
               </li>
 
               <li>
                 <a href="#section8" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  8. iGEM IIT-Delhi
+                  iGEM IIT-Delhi
                 </a>
               </li>
 
               <li>
                 <a href="#section9" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  9. iGEM Dusseldorf
+                  iGEM Dusseldorf
                 </a>
               </li>
 
             </ul>
-          </div>
-        </div>
+        {% end sidebar %}
 
 
 
 
 
-          <div class="banner flex-grow-1" style="flex:1">
-            <header>
-              <img src= "https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
-              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
-              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
-              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
-              <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
-              <h1>Collaborations</h1>
-            </header>
+      {% block page_content %}
 
 
       <div class="content">
