--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -87,7 +87,7 @@
               <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
               <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
               <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
-              <h1>Education</h1>
+              <h1>{% heading %}{% end_heading %}</h1>
         </header>
 
 
