Commenting it out

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -1,9 +1,9 @@
-{% extends "my-layout.html" %}
+<!-- {% extends "my-layout.html" %} -->
 
 
 
 <!-- Sidebar -->
-
+<!--
         {% block sidebar_content %}
 
             <ul class="nav nav-pills flex-column mb-auto">
@@ -175,3 +175,5 @@
           </div>
           </div>
 {% endblock %}
+
+-->
