--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -1,1 +1,177 @@
+{% extends "my-layout.html" %} 
 
+
+
+<!-- Sidebar -->
+
+        {% block sidebar_content %}
+
+            <ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                <a href="#section1" class="nav-link link-dark" aria-current="page">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                  iGEM ABOA
+                </a>
+              </li>
+              <li>
+                <a href="#section2" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+                  Maastricht iGEM
+                </a>
+              </li>
+              <li>
+                <a href="#section3" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+                  Penn State iGEM
+                </a>
+              </li>
+              <li>
+                <a href="#section4" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+                  iGEM McGill
+                </a>
+              </li>
+              <li>
+                <a href="#section5" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  iGEM IISER Bhopal
+                </a>
+              </li>
+
+              <li>
+                <a href="#section6" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  iGEM NTHU
+                </a>
+              </li>
+
+              <li>
+                <a href="#section7" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  OUC-China
+                </a>
+              </li>
+
+              <li>
+                <a href="#section8" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  iGEM IIT-Delhi
+                </a>
+              </li>
+
+              <li>
+                <a href="#section9" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  iGEM Dusseldorf
+                </a>
+              </li>
+
+            </ul>
+        {% endblock %}
+
+
+      {% block heading %}Collaborations{% endblock %}
+
+
+      {% block page_content %}
+
+
+      <div class="content">
+                <div class="m-5 mb-16">
+                    <p class="mt-5 MAIN-STUFF" id="section1">1. iGEM ABOA, Turku, Finland (May 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">iGEM season ropes in several important days that have contributed towards the well- being of our planet. World Environment Day (June 5) is a good day to be reminded of what the Earth is enduring and to always be showing our support. MIT-MAHE participated in a collaborative mission, initiated by ABOA where we fashioned a “Let us Save Our Planet From TCC” poster which portrayed our mission while aligning with the Environment Day spirit. </p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-aboa.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <p class="mt-5 MAIN-STUFF" id="section2">2. Maastricht iGEM, MSP Maastricht, Maastricht, Netherlands (June 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Working on a project is a long process. It requires dedication and hard work that needs to be put in and also comes with a sense of pride. However throughout this process, it can also be very easy to lose light of our initial mission and get demotivated. One thing that reminds us of how fun our work actually is, is music. MSP Maastricht brought together teams from all across the world to build a musical playlist that made everyday lab seem more like a party and less like work. It helped our team raise morale and meet our deadlines more efficiently while being less stressed. Listening to what different teams love to listen plays an imperative role in soothing our nerves and carrying the project forward.</p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/maastricht.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <p class="mt-3 MAIN-STUFF" id="section3">3. Penn State iGEM, Pennsylvania State University, Pennsylvania, USA (July 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The iGEM team from Penn State involved creating a diverse puzzle and gave us a platform to show off our creativity and identity. MIT-MAHE contributed to this global puzzle by sending in the project logo curated by our Graphics team which highlights our creative thinking and resembles our mission. It brings together diverse teams from all over the globe who aim at achieving one common goal- application of synthetic biology to find sustainable solutions to various problems around the world.</p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <p class="mt-3 MAIN-STUFF" id="section4">4. iGEM McGill, McGill University, Montreal, Quebec, Canada (July 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The McGill iGEM team came up with the idea of a Biome Book to document and showcase different proteins that were special to different teams. MIT-MAHE took part in this collaboration and sent in our novel amidase from <i>Ochrobactrum sp TccA</i>, which is our special protein. This interesting collaboration gave us the opportunity to broaden our horizons to the proteins that different teams are engineering and to recite to other teams our protein and its story!</p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/mcgill.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p class="mt-3 MAIN-STUFF" id="section5">5. iGEM IISER Bhopal, IISER Bhopal, Bhopal, Madhya Pradesh, India (July 2023) <br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> All India iGEM Meet (AIIM) is the event that hosts all Indian iGEM teams for a meetup and a smaller scale experience of the Grand Jamboree. It helped us understand how our ideas are flowing and to interact with various teams and get to learn their thought processes. MIT-MAHE got the opportunity to contribute towards this event through social media campaigning and graphics. To be able to curate these on a nation-wide scale was wonderful and helped our team to get a chance to enjoy the experience closely and also show off our creative skills. </p>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iiser-bhopal-2.png" class="img-fluid mt-4" alt="Image 1">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iiser-bhopal-1.png" class="img-fluid mt-4" alt="Image 2">
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mt-3 MAIN-STUFF" id="section6">6. iGEM NTHU, NTHU, Taiwan (August 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The iGEM map collaboration initiated by NTHU Taiwan allowed the personification of our projects- a unique perspective that draws the parallel between the various components that can be viewed as imperative characters in our story- our project. MIT-MAHE chose to present CarbanEl, our main solution enzyme as the character for the map- the hero of our story. The map lets the teams find out about other teams’ projects while telling a story about their own projects- using the logos and other parts as metaphors. </p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p class="mt-3 MAIN-STUFF" id="section7">7. OUC-China, Ocean University of China, China (August 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> It is always important to be more inclusive towards the society and contribute towards this cause- the collaboration opportunity instituted by OUC China gave us the chance to help incorporate the spark of our project within the hearts of autistic children by compiling coloring sheets related to the projects of different teams.</p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/ouc-synbio-rainbow-compressed.pdf" allowfullscreen></iframe>
+                    </div>
+                    <p class="mt-3 MAIN-STUFF" id="section8">8. iGEM IIT-Delhi, Indian Institute of Technology, Delhi, India<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The collaboration with iGEM IIT-Delhi was really special to us. Getting a chance to collaborate with a team working on a similar project and learning more about it was such an amazing experience. Together, we hosted a 3-day “Bioremediation Conclave” and a “BioArt Competition” open to the community and iGEM teams from all over the globe. The efforts that went behind the planning and organization of these events, frequent meetings and documentation by both the teams and finally, the day of the events were commendable!</p>
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-3.png" class="img-responsive rounded mx-auto d-block mt-4">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-4.png" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-2"> <i>Bioremediation Conclave</i> </p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The “Bioremediation Conclave” had speakers from various reputed institutions and start-ups in the field of bioremediation on the first two days, while the 3rd day was specially dedicated for iGEM teams to showcase their projects and get insights from the Chief Guest. The audience was really interactive with the speakers and teams, and that made these webinars all the more fun. The event was a great success and a learning experience like no other.  </p>
+                    
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-8.png" class="img-fluid mt-4" alt="Image 1">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-7.png" class="img-fluid mt-4" alt="Image 2">
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-6.png" class="img-fluid mt-4" alt="Image 1">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-5.png" class="img-fluid mt-4" alt="Image 2">
+                        </div>
+                      </div>
+                    </div>
+
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-3"> <i>BioArt Competition</i> </p>
+
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The “BioArt competition” conducted by us was an initiative to promote and celebrate the diversity and heritage of biology enthusiasts from all over the world while also addressing real-world problems through art. This way, we made science accessible to people from the non-scientific community as well, sparking a curiosity in them to learn more about it. </p>
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-1.jpg" class="img-fluid mt-4" alt="Image 1">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-2.png" class="img-fluid mt-4" alt="Image 2">
+                        </div>
+                      </div>
+                    </div>
+
+                    <p class="mt-3 MAIN-STUFF" id="section9">9. iGEM Dusseldorf, Heinrich-Heine University, Dusseldorf, Germany (September 2023)<br></p>
+                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> One of the most exciting parts of the iGEM journey is the exposure that comes with it and the friends that we make along the way. Explaining our projects to the other teams was made into an exciting activity by the iGEM team from Heinrich-Heine-University Düsseldorf. A postcard briefing the other teams about our project and a creative way to express the same and receiving postcards from other teams describing their projects was a heartwarming and fun-filled experience. The highlight of this project is the idea to circulate postcards, a thing of the past for our generation, which is a simple yet effective reminder to always be remembering and grateful for our roots. </p>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-1.png" class="img-fluid mt-4" alt="Image 1" style="border: 3px solid #555">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-2.png" class="img-fluid mt-4" alt="Image 2" style="border: 3px solid #555">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                <div class='m-5' style="height: 50px">
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+{% endblock %}
