--- a/wiki/pages/project-parts.html
+++ b/wiki/pages/project-parts.html
@@ -1,1 +1,9 @@
+{% extends "my-layout.html" %}
+  
+{% block sidebar_content %}
+{% endblock %}
 
+{% block heading %}Parts{% endblock %}
+
+{% block page_content %}
+{% endblock %}
