url_for home without pages()

--- a/wiki/my-navbar.html
+++ b/wiki/my-navbar.html
@@ -6,7 +6,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown">
-                      <a class="nav-link" href="{{ url_for('pages', page='home') }}">
+                      <a class="nav-link" href="{{ url_for('home') }}">
                         Home
                       </a>
                   </li>
