--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -91,7 +91,7 @@
   <div class="content-container" style="display:flex;">
     <div class="sidebar">
       <div class="d-flex flex-column flex-shrink-0 p-1" id="saveme"
-        style="width: 200px; height: 100vh; overflow-y: auto; position:fixed; background-color: #5ebca5;">
+        style="width: 200px; height: 100vh; overflow-y: auto; position:fixed; background-color: #ffffff;">
         <hr>
         {% block sidebar_content %}
         {% endblock %}
