--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -153,5 +153,6 @@
 <script src="{{ url_for('static', filename = 'jquery-3.3.1.slim.min.js') }}"></script>
 <script src="{{ url_for('static', filename = 'bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename = 'popper.js') }}"></script>
+<script src="{{ url_for('static', filename = 'bootstrap.bundle.min.js') }}"></script>
 
 </html>
