Adding the two new images

--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -105,6 +105,8 @@ To learn more about this, check out the <a href="https://2023.igem.wiki/mit-mahe
             The purpose of the amidase protein(Part number:<b>BBa_K4641000</b>) in the chassis is to breakdown Triclocarban (3,4,4′-Trichlorocarbanilide) into 3,4-dichloroaniline and 4-chloroaniline. Our target protein is naturally constitutively expressed in <i>Ochrobactrum sp. TCC-2</i> [2] </p>
 
             <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/part-image.png" class="img-fluid">
+            <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/breakdown-image.jpeg" class="img-fluid">
+
 
 <p class="mt-5 sub-stuff"> <b> Design </b> <br> The fragment was designed to contain restriction sites BamHI and XhoI prior to the start codon and post the stop codon respectively. The fragment was also designed to contain the required overlaps for Gibson assembly with pET22b+. There was an overlap of 20 bp corresponding to the pET22b+ added to either side of the fragment for ease of proceeding to Gibson assembly.</p>
 
@@ -115,6 +117,7 @@ The plasmid designed is as below:
 </p>
 
 <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-fluid">
+<img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-fluid">
 
 <p class="mt-5 MAIN-STUFF" > Implementation </p>
 
